--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "express-session": "^1.18.1",
+    "express-upload": "^0.1.0",
     "mysql": "^2.18.1"
   }
 }
